This is a barely working version for with IBus C.
The build system is converted from autotool to CMake.