@@ -5,7 +5,7 @@
     <description>Chewing Component</description>
     <exec>@CMAKE_INSTALL_PREFIX@/libexec/ibus-engine-chewing --ibus</exec>
     <version>@PRJ_VER_FULL@</version>
-    <author>@AUTHORS@</author>
+    <author>Peng Huang, Ding-Yi Chen</author>
     <license>GPL</license>
     <homepage>http://code.google.com/p/ibus</homepage>
     <textdomain>ibus-chewing</textdomain>
@@ -15,7 +15,7 @@
 	    <name>chewing</name>
 	    <language>zh</language>
 	    <license>GPL</license>
-	    <author>@AUTHORS@</author>
+	    <author>Peng Huang, Ding-Yi Chen</author>
             <icon>@PROJECT_DATADIR@/icons/@PROJECT_NAME@.png</icon>
 	    <layout>us</layout>
 	    <longname>Chewing</longname>
