@@ -1,2 +1,5 @@
+Memory leaking checked.
+
+* Fri Feb 20 2009 - Ding-Yi Chen <dchen at redhat.com>  - 1.0.0.20090220-1
 This is a barely working version for with IBus C.
 The build system is converted from autotool to CMake.
